--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "google-maps-react",
+  "name": "google-maps-react-amt",
   "version": "2.0.2",
   "description": "Google maps container",
-  "author": "Fullstack.io <us@fullstack.io>",
+  "author": "OlivierPT",
   "license": "MIT",
   "options": {
     "mocha": "--require scripts/mocha_runner -t rewireify src/**/__tests__/**/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fullstackreact/google-maps-react.git"
+    "url": "https://github.com/OlivierPT/google-maps-react.git"
   },
   "main": "dist/index.js",
   "scripts": {
